Fix edit view and validator formly fields alignment

--- a/ESSArch_TP/frontend/static/frontend/styles/modules/create_sip_ip_approval.scss
+++ b/ESSArch_TP/frontend/static/frontend/styles/modules/create_sip_ip_approval.scss
@@ -15,6 +15,7 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
+            align-items: flex-start;
             min-height: 70px;
             .formly-field {
                 min-width: 105px;
