--- a/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
@@ -615,6 +615,7 @@ padding: 0 12px;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        align-items: baseline;
         padding: 5px;
         width: 100%;
     }
